// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditProjectDropdown dropdown opens correctly 1`] = `
<div class="edit-project">
  <div class="edit-project__selection-area active">
    <p title="test" class="edit-project__selection-area__name">test</p> <svg class="edit-project__selection-area__image"></svg>
  </div>
  <div class="edit-project__dropdown">
    <div class="edit-project__dropdown__choice"><svg></svg>
      <p class="edit-project__dropdown__choice__label">Edit Details</p>
    </div>
  </div>
</div>
`;

exports[`EditProjectDropdown renders correctly 1`] = `
<div class="edit-project">
  <div class="edit-project__selection-area">
    <p title="test" class="edit-project__selection-area__name">test</p> <svg class="edit-project__selection-area__image"></svg>
  </div>
  <!---->
</div>
`;
